tests/baselines/reference/interMixingModulesInterfaces4.errors.txt
interMixingModulesInterfaces4.ts(5,13): error TS2322: Type 'null' is not assignable to type 'number'.


==== interMixingModulesInterfaces4.ts (1 errors) ====
    namespace A {
    
        export namespace B {
            export function createB(): number {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
            }
        }
    
        interface B {
            name: string;
            value: number;
        }
    }
    
    var x : number = A.B.createB();